--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ matrix:
 language: python
 python:
     - "3.4"
+addons:
+  apt:
+    packages:
+    - python3-pip
+    - time
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo pip3 install hovercraft; fi
 script:
